chore: add domain configuration for https://xn--bris-v0b.com/
- Add homepage field to package.json
- Add meta tags for SEO and social sharing (Open Graph, Twitter Card)
- Add canonical URL
- Add description meta tag

--- a/index.html
+++ b/index.html
@@ -5,6 +5,21 @@
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Boris - Nostr Bookmarks</title>
+    <meta name="description" content="Your reading list for the Nostr world. A minimal nostr client for bookmark management with highlights." />
+    <link rel="canonical" href="https://xn--bris-v0b.com/" />
+    
+    <!-- Open Graph / Social Media -->
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://xn--bris-v0b.com/" />
+    <meta property="og:title" content="Boris - Nostr Bookmarks" />
+    <meta property="og:description" content="Your reading list for the Nostr world. A minimal nostr client for bookmark management with highlights." />
+    <meta property="og:site_name" content="Boris" />
+    
+    <!-- Twitter Card -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:url" content="https://xn--bris-v0b.com/" />
+    <meta name="twitter:title" content="Boris - Nostr Bookmarks" />
+    <meta name="twitter:description" content="Your reading list for the Nostr world. A minimal nostr client for bookmark management with highlights." />
   </head>
   <body>
     <div id="root"></div>
