chore(analytics): add Fathom analytics script

--- a/index.html
+++ b/index.html
@@ -27,7 +27,11 @@
     <meta name="twitter:title" content="Boris - Read, Highlight, Explore" />
     <meta name="twitter:description" content="Your reading list for the Nostr world. A minimal nostr client for bookmark management with highlights." />
     <meta name="twitter:image" content="https://read.withboris.com/boris-social-1200.png" />
-    
+
+    <!-- Fathom - beautiful, simple website analytics -->
+    <script src="https://cdn.usefathom.com/script.js" data-site="LLSGRVAP" defer></script>
+    <!-- / Fathom -->
+
     <!-- Default to system theme until settings load from Nostr -->
     <script>
       document.documentElement.className = 'theme-system';
