--- a/index.html
+++ b/index.html
@@ -28,9 +28,9 @@
     <meta name="twitter:description" content="Your reading list for the Nostr world. A minimal nostr client for bookmark management with highlights." />
     <meta name="twitter:image" content="https://read.withboris.com/boris-social-1200.png" />
 
-    <!-- Fathom - beautiful, simple website analytics -->
+    <!-- Fathom -->
     <script src="https://cdn.usefathom.com/script.js" data-site="LLSGRVAP" defer></script>
-    <!-- / Fathom -->
+    <!-- Fathom -->
 
     <!-- Default to system theme until settings load from Nostr -->
     <script>
